tests/ui/basic/method_on_non_list.rs
use metamatch::eval;

fn main() {
    eval! {
        let x = 5;
        x.push(1)
    };
}
